Fix different sized homepage images, fix overlapping elements on smaller window sizes

--- a/app/assets/stylesheets/style-main.css
+++ b/app/assets/stylesheets/style-main.css
@@ -39,6 +39,7 @@ body {
   color: #fff;
 }
 h3.divider {
+  margin-top: 40px;
   border-bottom: 1px solid hsl(163, 63%, 48%);
 }
 .section-heading {
@@ -186,18 +187,56 @@ a:focus {
 
 /* Index styles */
 
-.listing-container,.capsule {
+.listing-container {
   padding: 5px;
 }
-
-.game-img,.package-img {
+.capsule {
+  padding: 0;
+}
+.stretchy {
   width: 100%;
+  padding-bottom: calc((215/460)*100%); /* normal game image is 215*460 */
+}
+.stretchy .inner {
+  position: absolute;
+  top: 0; bottom: 0; left: 0; right: 0;
+}
+.game-img, .package-img {
+  width: 100%;
+  z-index: 1;
+}
+
+.vertical-spacer {
+  background-color: #202020;
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.vertical-spacer-text {
+  color: rgba(255,255,255,0.5);
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  height: calc((1 - (87*460)/(231*215)) * 100%); /* some math, since pkg img is 231*87 and normal img is 215*460 */
+  padding-top: 1.5%;
+  bottom: 0;
+}
+.package-link:hover,
+.package-link:focus,
+.package-link:active {
+  text-decoration: none;
 }
 
 
 
 /* New Deals line styling */
 
+.divider-container {
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
 h3.divider {
   width: 100%;
   text-align: center;
@@ -207,25 +246,6 @@ h3.divider {
 h3 span.divider {
   background: #373737;
   padding: 0 10px;
-}
-
-
-
-/* Package styling */
-
-.vertical-spacer {
-  background-color: #222;
-  text-align: center;
-}
-.vertical-spacer-text {
-  /*line-height: 29px; <-- assigned dynamically in js */
-  white-space: nowrap;
-  opacity: 0.5;
-  color: #fff;
-  text-align: center;
-}
-.package-link:hover {
-  text-decoration: none;
 }
 
 
